--- a/index.html
+++ b/index.html
@@ -5,82 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Store</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <header>
         <img src="img/logo.png" alt="DSLogo">
     </header>
-    <div class="hero">
-        <img src="img/hero.jpg" alt="hero">
-    </div>
 
-    <main>
-        <h2>Nuestros productos</h2>
-        <ul class="lista-productos">
-            <li>
-                <img src="img/1.jpg" alt="">
-                <p>Vuejs <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/2.jpg" alt="">
-                <p>Angular <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/3.jpg" alt="">
-                <p>React <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/4.jpg" alt="">
-                <p>Redux <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/5.jpg" alt="">
-                <p>Node.js <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/6.jpg" alt="">
-                <p>SASS <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/7.jpg" alt="">
-                <p>HTML5 <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/8.jpg" alt="">
-                <p>Github <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/9.jpg" alt="">
-                <p>Bulma CSS <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/10.jpg" alt="">
-                <p>TypeScript <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/11.jpg" alt="">
-                <p>Drupal <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            <li>
-                <img src="img/12.jpg" alt="">
-                <p>JavaScript <span>$25</span></p>
-                <a href="#" class="boton">Comprar</a>
-            </li>
-            
-        </ul>
-    </main>
-
+    <div class="contenedor">
+        <div class="hero">
+            <img src="img/hero.jpg" alt="hero">
+        </div>
+        <main>
+            <h2>Nuestros productos</h2>
+            <ul class="lista-productos">
+                <li>
+                    <img src="img/1.jpg" alt="">
+                    <p>Vuejs <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/2.jpg" alt="">
+                    <p>Angular <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/3.jpg" alt="">
+                    <p>React <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/4.jpg" alt="">
+                    <p>Redux <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/5.jpg" alt="">
+                    <p>Node.js <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/6.jpg" alt="">
+                    <p>SASS <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/7.jpg" alt="">
+                    <p>HTML5 <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/8.jpg" alt="">
+                    <p>Github <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/9.jpg" alt="">
+                    <p>Bulma CSS <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/10.jpg" alt="">
+                    <p>TypeScript <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/11.jpg" alt="">
+                    <p>Drupal <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                <li>
+                    <img src="img/12.jpg" alt="">
+                    <p>JavaScript <span>$25</span></p>
+                    <a href="#" class="boton">Comprar</a>
+                </li>
+                
+            </ul>
+        </main>
+    </div><!--.contenedor-->
 </body>
 </html>
